Override error pages, fix header align issue.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -84,12 +84,13 @@ textarea {
         transform: translateX(-50%);
     }
 
-    .duration-0 {
-        transition-duration: 0ms;
+    .h-screen-80 {
+        height: 93vh;
     }
 
+
     .logo {
-        max-width: 136px;
+        max-width: 140px;
     }
     .flex-important {
         display: flex !important;
